--- a/index.html
+++ b/index.html
@@ -13,10 +13,12 @@
     
     <header class="cabeçario">
        <div class="menu">
+        <div class="menu__intensDeCima">
         <img class="menu__hamburguer" src="menu.png">
         <img src="panda.png" class="menu__panda">
         <textarea class="menu__caixaText">Do que você precisa?</textarea>
-        <img src="">
+        <img width="100px" src="perfil.png">
+        </div>
         <div class="menu__block">
             
 
