adição do carrinho de compras

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
         <textarea class="menu__caixaText">Do que você precisa?</textarea>
         
         <img width="100px" src="perfil.png">
+
+        <img width="100px"src="carrinho.png"class="menu__carrinho">
         </div>
         <div class="menu__block">
             <a class="menu__block__text">Alimentos</a>
