--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
         <div class="menu__intensDeCima">
         <img class="menu__hamburguer" src="menu.png">
 
-        <img width="100px" src="panda.png" class="menu__panda">
+        <img  src="panda.png" class="menu__panda">
 
         <textarea class="menu__caixaText">Do que você precisa?</textarea>
         
-        <img width="70px" src="perfil.png">
+        <img class="menu__perfil" src="perfil.png">
 
-        <img width="70px"src="carrinho.png"class="menu__carrinho">
+        <img src="carrinho.png"class="menu__carrinho">
         </div>
         <div class="menu__block">
             <a class="menu__block__text">Alimentos</a>
