--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
        </div>
        
        <div class="pagamentos">
-           Débito 
+           Débito <br>
            boleto
        </div>
        
